# oxi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CNAME  Dockerfile  README.md  TODO.md  docker-compose.yml  flake.nix  index.html
backend/: Cargo.toml
backend/migrations/: V001__initial_schema.sql  V002__folders_and_messages.sql  V003__add_date_epoch.sql  V004__folder_messages_updated_at.sql  V005__drafts_and_attachments.sql  V006__cache_attachments_and_headers.sql  V007__contacts.sql  V008__identities.sql  V009__notification_preferences.sql  V010__contact_groups.sql  V011__message_reaction.sql  V012__tags.sql  V013__display_preferences.sql  V014__compose_format.sql  V015__deep_index.sql  V019__known_addresses.sql
backend/src/: AGENTS.md  config.rs  email_theme.rs  error.rs  main.rs
backend/src/auth/: csrf.rs  imap_auth.rs  middleware.rs  mod.rs  session.rs  user_data.rs
backend/src/db/: contact_groups.rs  contacts.rs  display_preferences.rs  drafts.rs  folders.rs  identities.rs  messages.rs  mod.rs  notification_preferences.rs  pool.rs  tags.rs
backend/src/imap/: client.rs  connection.rs  error.rs  mock.rs  mod.rs  parse.rs  types.rs
backend/src/realtime/: events.rs  idle.rs  mod.rs  sync.rs  ws.rs
backend/src/routes/: attachments.rs  auth.rs  contact_groups.rs  contacts.rs  display_preferences.rs  drafts.rs  folder_mgmt.rs  folders.rs  health.rs  identities.rs  messages.rs  mod.rs  notification_preferences.rs  quota.rs  search.rs  send.rs  tags.rs  tests.rs
backend/src/search/: engine.rs
backend/src/smtp/: client.rs  error.rs  mock.rs  mod.rs  (+1 more)
(+119 files in other folders)
